--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 </head>
 
-<body>
+<body class="d-flex">
   <header>
     <img src="./assets/images/logo.svg" alt="logo">
   </header>
@@ -76,9 +76,14 @@
 
       <button>Reset</button>
     </section>
+
+    <div class="attribution mobile">
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
+      Coded by <a href="#">Adewale Stephen</a>.
+    </div>
   </main>
 
-  <div class="attribution">
+  <div class="attribution desktop">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
     Coded by <a href="#">Adewale Stephen</a>.
   </div>
